Fixed flickering UI when new comment is added or updated

--- a/src/app/components/comment/comment.component.scss
+++ b/src/app/components/comment/comment.component.scss
@@ -29,7 +29,7 @@
 
 @media (prefers-color-scheme: dark) {
     .comment-item {
-        background: #202020;
+        background: #3b3b3b;
 
         &.speak {
             background-color: #3160ab
