--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -87,7 +87,7 @@ ion-textarea {
 
 @media (prefers-color-scheme: dark) {
   .form-row {
-    background: #202020;
+    background: #3b3b3b;
   }
 
 }
